Refactor SendNotificationService.java (#1349)