@@ -1,6 +1,5 @@
 package uk.gov.hmcts.reform.et.syaapi.service;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -9,13 +8,10 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 import uk.gov.hmcts.et.common.model.ccd.items.GenericTypeItem;
-import uk.gov.hmcts.et.common.model.ccd.items.ListTypeItem;
-import uk.gov.hmcts.et.common.model.ccd.items.PseResponseTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.types.PseResponseType;
 import uk.gov.hmcts.et.common.model.ccd.types.RespondNotificationType;
 import uk.gov.hmcts.et.common.model.ccd.types.SendNotificationType;
 import uk.gov.hmcts.et.common.model.ccd.types.SendNotificationTypeItem;
-import uk.gov.hmcts.reform.ccd.client.model.CaseDataContent;
 import uk.gov.hmcts.reform.ccd.client.model.StartEventResponse;
 import uk.gov.hmcts.reform.et.syaapi.helper.CaseDetailsConverter;
 import uk.gov.hmcts.reform.et.syaapi.model.TestData;
@@ -33,9 +29,9 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.times;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLAIMANT_TITLE;
@@ -55,7 +51,6 @@ class SendNotificationServiceTest {
     private TestData testData;
     private static final String MOCK_TOKEN = "Bearer TestServiceAuth";
     private static final String ID = "777";
-    private static final String CASE_ID = "1234";
     private static final List<String> NOTIFICATION_SUBJECT_IS_ECC =
         List.of("Employer Contract Claim", "Case management orders / requests");
     private static final List<String> NOTIFICATION_SUBJECT_IS_NOT_ECC =
@@ -67,6 +62,8 @@ class SendNotificationServiceTest {
     @Mock
     private CaseDocumentService caseDocumentService;
     @Mock
+    private CaseDetailsConverter caseDetailsConverter;
+    @Mock
     private NotificationService notificationService;
     @Mock
     private FeatureToggleService featureToggleService;
@@ -77,11 +74,10 @@ class SendNotificationServiceTest {
 
     @BeforeEach
     void beforeEach() {
-        ObjectMapper objectMapper = new ObjectMapper();
         sendNotificationService = new SendNotificationService(
             caseService,
             caseDocumentService,
-            new CaseDetailsConverter(objectMapper),
+            caseDetailsConverter,
             notificationService,
             featureToggleService,
             idamClient
@@ -101,52 +97,21 @@ class SendNotificationServiceTest {
             UPDATE_NOTIFICATION_STATE
         )).thenReturn(updateCaseEventResponse);
 
-        List<PseResponseTypeItem> pseResponseItems = List.of(PseResponseTypeItem.builder().id(ID).value(
-            PseResponseType.builder()
-                .from(CLAIMANT_TITLE)
-                .hasSupportingMaterial(NO)
-                .response("Some response text")
-                .responseState(null)
-                .build()).build()
-        );
-
-        ListTypeItem<RespondNotificationType> from = ListTypeItem.from(
-            GenericTypeItem.from(ID, RespondNotificationType.builder()
-                .state(VIEWED).isClaimantResponseDue(YES).build()
-            )
-        );
-
-        List<SendNotificationTypeItem> items = List.of(
-            SendNotificationTypeItem.builder()
-                .id(ID)
-                .value(SendNotificationType.builder()
-                           .notificationState(VIEWED)
-                           .respondNotificationTypeCollection(from)
-                           .respondCollection(pseResponseItems)
-                           .build())
-                .build()
-        );
-
-        ArgumentCaptor<CaseDataContent> contentCaptor = ArgumentCaptor.forClass(CaseDataContent.class);
         sendNotificationService.updateSendNotificationState(MOCK_TOKEN, request);
 
-        verify(caseService, times(1)).submitUpdate(
-            eq(MOCK_TOKEN), eq("11"), contentCaptor.capture(), eq(CASE_ID));
+        ArgumentCaptor<CaseData> argumentCaptor = ArgumentCaptor.forClass(CaseData.class);
+        verify(caseDetailsConverter).caseDataContent(any(), argumentCaptor.capture());
+        CaseData data = argumentCaptor.getValue();
 
-        CaseData data = (CaseData) contentCaptor.getValue().getData();
+        assertEquals(1, data.getSendNotificationCollection().size());
 
-        for (int i = 0; i < items.size(); i++) {
-            SendNotificationTypeItem expectedItem = items.get(i);
-            SendNotificationTypeItem actualItem = data.getSendNotificationCollection().get(i);
+        SendNotificationTypeItem actualItem = data.getSendNotificationCollection().getFirst();
+        assertEquals(ID, actualItem.getId());
+        assertEquals(VIEWED, actualItem.getValue().getNotificationState());
 
-            assertEquals(expectedItem.getId(), actualItem.getId());
-            assertEquals(
-                expectedItem.getValue().getNotificationState(), actualItem.getValue().getNotificationState());
-
-            for (int j = 0; j < actualItem.getValue().getRespondCollection().size(); j++) {
-                PseResponseType actualResponseType = actualItem.getValue().getRespondCollection().get(j).getValue();
-                assertEquals(VIEWED, actualResponseType.getResponseState());
-            }
+        for (int j = 0; j < actualItem.getValue().getRespondCollection().size(); j++) {
+            PseResponseType actualResponseType = actualItem.getValue().getRespondCollection().get(j).getValue();
+            assertEquals(VIEWED, actualResponseType.getResponseState());
         }
     }
 
@@ -162,23 +127,21 @@ class SendNotificationServiceTest {
             UPDATE_NOTIFICATION_STATE
         )).thenReturn(updateCaseEventResponse);
 
-        List<SendNotificationTypeItem> items = List.of(
+        sendNotificationService.updateSendNotificationState(MOCK_TOKEN, request);
+
+        ArgumentCaptor<CaseData> argumentCaptor = ArgumentCaptor.forClass(CaseData.class);
+        verify(caseDetailsConverter).caseDataContent(any(), argumentCaptor.capture());
+        CaseData data = argumentCaptor.getValue();
+
+        List<SendNotificationTypeItem> expected = List.of(
             SendNotificationTypeItem.builder()
                 .id(ID)
                 .value(SendNotificationType.builder()
-                           .notificationState("viewed")
+                           .notificationState(VIEWED)
                            .build())
                 .build()
         );
-
-        ArgumentCaptor<CaseDataContent> contentCaptor = ArgumentCaptor.forClass(CaseDataContent.class);
-        sendNotificationService.updateSendNotificationState(MOCK_TOKEN, request);
-
-        verify(caseService, times(1)).submitUpdate(
-            eq(MOCK_TOKEN), eq("11"), contentCaptor.capture(), eq(CASE_ID));
-
-        CaseData data = (CaseData) contentCaptor.getValue().getData();
-        assertEquals(items, data.getSendNotificationCollection());
+        assertEquals(expected, data.getSendNotificationCollection());
     }
 
     @Test
@@ -194,7 +157,13 @@ class SendNotificationServiceTest {
             UPDATE_NOTIFICATION_STATE
         )).thenReturn(updateCaseEventResponse);
 
-        List<SendNotificationTypeItem> items = List.of(
+        sendNotificationService.updateSendNotificationState(MOCK_TOKEN, request);
+
+        ArgumentCaptor<CaseData> argumentCaptor = ArgumentCaptor.forClass(CaseData.class);
+        verify(caseDetailsConverter).caseDataContent(any(), argumentCaptor.capture());
+        CaseData data = argumentCaptor.getValue();
+
+        List<SendNotificationTypeItem> expected = List.of(
             SendNotificationTypeItem.builder()
                 .id(ID)
                 .value(SendNotificationType.builder()
@@ -202,14 +171,7 @@ class SendNotificationServiceTest {
                            .build())
                 .build()
         );
-
-        ArgumentCaptor<CaseDataContent> contentCaptor = ArgumentCaptor.forClass(CaseDataContent.class);
-        sendNotificationService.updateSendNotificationState(MOCK_TOKEN, request);
-        verify(caseService, times(1)).submitUpdate(
-            eq(MOCK_TOKEN), eq("11"), contentCaptor.capture(), eq(CASE_ID));
-
-        CaseData data = (CaseData) contentCaptor.getValue().getData();
-        assertEquals(items, data.getSendNotificationCollection());
+        assertEquals(expected, data.getSendNotificationCollection());
     }
 
     @Test
@@ -224,7 +186,13 @@ class SendNotificationServiceTest {
             UPDATE_NOTIFICATION_STATE
         )).thenReturn(updateCaseEventResponse);
 
-        List<SendNotificationTypeItem> items = List.of(
+        sendNotificationService.updateSendNotificationState(MOCK_TOKEN, request);
+
+        ArgumentCaptor<CaseData> argumentCaptor = ArgumentCaptor.forClass(CaseData.class);
+        verify(caseDetailsConverter).caseDataContent(any(), argumentCaptor.capture());
+        CaseData data = argumentCaptor.getValue();
+
+        List<SendNotificationTypeItem> expected = List.of(
             SendNotificationTypeItem.builder()
                 .id(ID)
                 .value(SendNotificationType.builder()
@@ -232,18 +200,11 @@ class SendNotificationServiceTest {
                            .build())
                 .build()
         );
-
-        ArgumentCaptor<CaseDataContent> contentCaptor = ArgumentCaptor.forClass(CaseDataContent.class);
-        sendNotificationService.updateSendNotificationState(MOCK_TOKEN, request);
-        verify(caseService, times(1)).submitUpdate(
-            eq(MOCK_TOKEN), eq("11"), contentCaptor.capture(), eq(CASE_ID));
-
-        CaseData data = (CaseData) contentCaptor.getValue().getData();
-        assertEquals(items, data.getSendNotificationCollection());
+        assertEquals(expected, data.getSendNotificationCollection());
     }
 
     @Test
-    void shouldUpdateAddResponseSendNotification() {
+    void shouldUpdateAddClaimantResponseSendNotification() {
         when(idamClient.getUserInfo(TEST_SERVICE_AUTH_TOKEN)).thenReturn(
             UserInfo.builder()
                 .name(AUTHOR)
@@ -263,56 +224,23 @@ class SendNotificationServiceTest {
 
         when(featureToggleService.isEccEnabled()).thenReturn(true);
 
-        ListTypeItem<RespondNotificationType> from = ListTypeItem.from(
-            GenericTypeItem.from(ID, RespondNotificationType.builder()
-                .state(VIEWED).isClaimantResponseDue(YES).build()
-            )
-        );
+        sendNotificationService.addClaimantResponseSendNotification(MOCK_TOKEN, request);
 
-        PseResponseTypeItem buildResponse = PseResponseTypeItem.builder()
-            .id(ID)
-            .value(
-                PseResponseType.builder()
-                    .from(CLAIMANT_TITLE)
-                    .response("RESPONSE")
-                    .hasSupportingMaterial(NO)
-                    .build()
-            ).build();
+        ArgumentCaptor<CaseData> argumentCaptor = ArgumentCaptor.forClass(CaseData.class);
+        verify(caseDetailsConverter).caseDataContent(any(), argumentCaptor.capture());
+        CaseData data = argumentCaptor.getValue();
 
-        List<SendNotificationTypeItem> items = List.of(
-            SendNotificationTypeItem.builder()
-                .id(ID)
-                .value(SendNotificationType.builder()
-                           .sendNotificationSubject(NOTIFICATION_SUBJECT_IS_ECC)
-                           .respondCollection(List.of(buildResponse))
-                           .respondNotificationTypeCollection(from)
-                           .build())
-                .build()
-        );
+        SendNotificationType notification = data.getSendNotificationCollection().getFirst().getValue();
+        PseResponseType actual = notification.getRespondCollection().getFirst().getValue();
 
-        sendNotificationService.addResponseSendNotification(MOCK_TOKEN, request);
-
-        ArgumentCaptor<CaseDataContent> contentCaptor = ArgumentCaptor.forClass(CaseDataContent.class);
-
-        verify(caseService, times(1)).submitUpdate(
-            eq(MOCK_TOKEN), eq("11"), contentCaptor.capture(), eq(CASE_ID));
-
-        CaseData data = (CaseData) contentCaptor.getValue().getData();
-        List<PseResponseTypeItem> expectedResponses = items.get(0).getValue().getRespondCollection();
-        PseResponseType expected = expectedResponses.get(0).getValue();
-
-        SendNotificationType notification = data.getSendNotificationCollection().get(0).getValue();
-        PseResponseType actual = notification.getRespondCollection().get(0).getValue();
-
-
-        assertEquals(expected.getResponse(), actual.getResponse());
-        assertEquals(expected.getFrom(), actual.getFrom());
+        assertEquals("RESPONSE", actual.getResponse());
+        assertEquals(CLAIMANT_TITLE, actual.getFrom());
         assertTrue(actual.getDate().matches("^\\d{1,2} [A-Za-z]{3,4} \\d{4}$"));
         assertEquals(NO, actual.getHasSupportingMaterial());
         assertEquals(SUBMITTED, notification.getNotificationState());
 
         GenericTypeItem<RespondNotificationType> tribunalResponse =
-            notification.getRespondNotificationTypeCollection().get(0);
+            notification.getRespondNotificationTypeCollection().getFirst();
         assertEquals(SUBMITTED, tribunalResponse.getValue().getState());
         assertNull(tribunalResponse.getValue().getIsClaimantResponseDue());
         assertEquals(AUTHOR, actual.getAuthor());
@@ -322,7 +250,7 @@ class SendNotificationServiceTest {
     }
 
     @Test
-    void shouldUpdateAddResponseSendNotificationNoResponsesOutstanding() {
+    void shouldUpdateAddClaimantResponseSendNotificationNoResponsesOutstanding() {
         SendNotificationAddResponseRequest request = testData.getSendNotificationAddResponseRequest();
 
         StartEventResponse startEventResponse = updateCaseEventResponseSubmittedNotification();
@@ -337,55 +265,23 @@ class SendNotificationServiceTest {
 
         when(featureToggleService.isEccEnabled()).thenReturn(true);
 
-        ListTypeItem<RespondNotificationType> from = ListTypeItem.from(
-            GenericTypeItem.from(ID, RespondNotificationType.builder()
-                .state(VIEWED).build()
-            )
-        );
+        sendNotificationService.addClaimantResponseSendNotification(MOCK_TOKEN, request);
 
-        PseResponseTypeItem buildResponse = PseResponseTypeItem.builder()
-            .id(ID)
-            .value(
-                PseResponseType.builder()
-                    .from(CLAIMANT_TITLE)
-                    .hasSupportingMaterial(YES)
-                    .response("RESPONSE")
-                    .build()
-            ).build();
+        ArgumentCaptor<CaseData> argumentCaptor = ArgumentCaptor.forClass(CaseData.class);
+        verify(caseDetailsConverter).caseDataContent(any(), argumentCaptor.capture());
+        CaseData data = argumentCaptor.getValue();
 
-        List<SendNotificationTypeItem> items = List.of(
-            SendNotificationTypeItem.builder()
-                .id(ID)
-                .value(SendNotificationType.builder()
-                           .sendNotificationSubject(NOTIFICATION_SUBJECT_IS_NOT_ECC)
-                           .respondCollection(List.of(buildResponse))
-                           .respondNotificationTypeCollection(from)
-                           .build())
-                .build()
-        );
+        SendNotificationType notification = data.getSendNotificationCollection().getFirst().getValue();
+        PseResponseType actual = notification.getRespondCollection().getFirst().getValue();
 
-        sendNotificationService.addResponseSendNotification(MOCK_TOKEN, request);
-
-        ArgumentCaptor<CaseDataContent> contentCaptor = ArgumentCaptor.forClass(CaseDataContent.class);
-
-        verify(caseService, times(1)).submitUpdate(
-            eq(MOCK_TOKEN), eq("11"), contentCaptor.capture(), eq(CASE_ID));
-
-        CaseData data = (CaseData) contentCaptor.getValue().getData();
-        List<PseResponseTypeItem> expectedResponses = items.get(0).getValue().getRespondCollection();
-        PseResponseType expected = expectedResponses.get(0).getValue();
-
-        SendNotificationType notification = data.getSendNotificationCollection().get(0).getValue();
-        PseResponseType actual = notification.getRespondCollection().get(0).getValue();
-
-        assertEquals(expected.getResponse(), actual.getResponse());
-        assertEquals(expected.getFrom(), actual.getFrom());
+        assertEquals("RESPONSE", actual.getResponse());
+        assertEquals(CLAIMANT_TITLE, actual.getFrom());
         assertTrue(actual.getDate().matches("^\\d{1,2} [A-Za-z]{3,4} \\d{4}$"));
         assertEquals(NO, actual.getHasSupportingMaterial());
         assertEquals(SUBMITTED, notification.getNotificationState());
 
         GenericTypeItem<RespondNotificationType> tribunalResponse =
-            notification.getRespondNotificationTypeCollection().get(0);
+            notification.getRespondNotificationTypeCollection().getFirst();
         assertNull(tribunalResponse.getValue().getIsClaimantResponseDue());
 
         assertEquals(NO, actual.getIsECC());
@@ -393,8 +289,10 @@ class SendNotificationServiceTest {
     }
 
     @Test
-    void shouldNotUpdateAddResponseWhenNone() {
+    void shouldNotUpdateAddResponseWhenIdNotMatch() {
         SendNotificationAddResponseRequest request = testData.getSendNotificationAddResponseRequest();
+        request.setSendNotificationId("test");
+
         StartEventResponse updateCaseEventResponse = updateCaseEventResponseNoNotificationResponses();
         when(caseService.startUpdate(
             TEST_SERVICE_AUTH_TOKEN,
@@ -403,28 +301,13 @@ class SendNotificationServiceTest {
             UPDATE_NOTIFICATION_RESPONSE
         )).thenReturn(updateCaseEventResponse);
 
-        when(featureToggleService.isEccEnabled()).thenReturn(true);
-
-        List<SendNotificationTypeItem> items = List.of(
-            SendNotificationTypeItem.builder()
-                .id(ID)
-                .value(SendNotificationType.builder()
-                           .build())
-                .build()
+        IllegalArgumentException exception = assertThrows(
+            IllegalArgumentException.class,
+            () -> sendNotificationService.addClaimantResponseSendNotification(MOCK_TOKEN, request)
         );
 
-        sendNotificationService.addResponseSendNotification(MOCK_TOKEN, request);
-
-        ArgumentCaptor<CaseDataContent> contentCaptor = ArgumentCaptor.forClass(CaseDataContent.class);
-
-        verify(caseService, times(1)).submitUpdate(
-            eq(MOCK_TOKEN), eq("11"), contentCaptor.capture(), eq(CASE_ID));
-
-        List<PseResponseTypeItem> expectedResponses = items.get(0).getValue().getRespondCollection();
-
-        assertNull(expectedResponses);
+        assertEquals("SendNotification Id is incorrect", exception.getMessage());
     }
-
 
     public StartEventResponse updateCaseEventResponseNoNotificationResponses() {
         StartEventResponse startEventResponse1 = ResourceLoader.fromString(
@@ -451,7 +334,7 @@ class SendNotificationServiceTest {
     @SuppressWarnings("unchecked")
     private static void removeResponses(StartEventResponse startEventResponse1) {
         Object notifications = startEventResponse1.getCaseDetails().getData().get("sendNotificationCollection");
-        ((List<LinkedHashMap<String, LinkedHashMap<String, Object>>>) notifications).get(0).get("value")
+        ((List<LinkedHashMap<String, LinkedHashMap<String, Object>>>) notifications).getFirst().get("value")
             .remove("respondNotificationTypeCollection");
     }
 
@@ -459,7 +342,7 @@ class SendNotificationServiceTest {
     private static void addNotificationSubject(
         StartEventResponse startEventResponse1, List<String> notificationSubject) {
         Object notifications = startEventResponse1.getCaseDetails().getData().get("sendNotificationCollection");
-        ((List<LinkedHashMap<String, LinkedHashMap<String, Object>>>) notifications).get(0).get("value")
+        ((List<LinkedHashMap<String, LinkedHashMap<String, Object>>>) notifications).getFirst().get("value")
             .put("sendNotificationSubject", notificationSubject);
     }
 }
